# Scarlet-Renderer

./: .gitIgnore  CMakeLists.txt  README.md
Source/Scarlet-Renderer/: CMakeLists.txt
Source/Scarlet-Renderer/Headers/Scarlet/: Camera.h  RenderBuffer.h  Renderer.h  Scene.h
Source/Scarlet-Renderer/Headers/Scarlet/AccelerationStructures/: AccelerationStructure.h  FlatStructure.h
Source/Scarlet-Renderer/Headers/Scarlet/Materials/: ColorMaterial.h  Material.h  MaterialLibrary.h  NormalMaterial.h
Source/Scarlet-Renderer/Headers/Scarlet/Math/: Mat4x4.h  Vector2F.h  Vector3F.h  Vector4F.h
Source/Scarlet-Renderer/Headers/Scarlet/Objects/: Color.h  Pixel.h  Ray.h
Source/Scarlet-Renderer/Headers/Scarlet/Renderables/: Plane.h  Renderable.h  Sphere.h
Source/Scarlet-Renderer/Headers/Scarlet/Utils/: Timer.h
Source/Scarlet-Renderer/Source/Scarlet/: Camera.cpp  RenderBuffer.cpp  Renderer.cpp  Scene.cpp
Source/Scarlet-Renderer/Source/Scarlet/AccelerationStructures/: FlatStructure.cpp
Source/Scarlet-Renderer/Source/Scarlet/Materials/: ColorMaterial.cpp  MaterialLibrary.cpp  NormalMaterial.cpp
Source/Scarlet-Renderer/Source/Scarlet/Math/: Mat4x4.cpp  Vector2F.cpp  Vector3F.cpp  Vector4F.cpp
Source/Scarlet-Renderer/Source/Scarlet/Objects/: Color.cpp  Pixel.cpp  Ray.cpp
Source/Scarlet-Renderer/Source/Scarlet/Renderables/: Plane.cpp  Renderable.cpp  Sphere.cpp
Source/Scarlet-Renderer/Source/Scarlet/Utils/: Timer.cpp
Source/Scarlet-Standalone/: CMakeLists.txt
Source/Scarlet-Standalone/Source/: main.cpp
